--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "jquery-bar-rating": "^1.2.2",
     "mapbox-gl": "^1.0.0",
     "places.js": "^1.16.4",
-    "popper.js": "^1.15.0"
+    "popper.js": "^1.15.0",
+    "wysihtml": "^0.6.0-beta1"
   },
   "devDependencies": {
     "webpack-dev-server": "^3.7.2"
